--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
    justify-content: center;
    align-content: center;
    outline: 3px solid rgb(8, 240, 8);
+   margin-top: 20px;
+   border-radius: 20px;
 }
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -32,8 +34,9 @@ div{
 }
 
 .profile-picture{
-    width: 130px;
-    height: 130px;
+    width: 140px;
+    height: 250px;
+    margin-top: 20px;
     border-radius: 50%;
     margin: 0 auto 10px;
     overflow: hidden;
