--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .profile-card{
-    background-color: whitesmoke;
+    background-color: rgb(237, 250, 237);
     border-radius: 10px;
     padding: 20px;
     width: 320px;
